diaugeia api integration for ada code validation (#38)
* diaugeia api integration for ada code validation

* ada validation code refactor

* ada validation code refactor vol.2

* ada validation code refactor vol.3
